# tt-lang-sandbox

./: .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  requirements-runtime.txt  setup.py
.github/: CODEOWNERS
.github/containers/: Dockerfile  Dockerfile.base  build-docker-images.sh
.github/scripts/: check-installed-ttnn.py  check-light-metapackage.py  check-tt-metal-version.sh  check-wheel-bundled-payload.py  check-wheel-ttnn-metadata.py  compute-nightly-version.py  configure-ttlang-build.sh  detect-uplift.sh  publish-s3-summary.sh  publish-s3-wheels.sh  require-pypi-ttnn-alignment.sh  resolve-s3-publish-inputs.sh  resolve-wheel-versions.sh  run-tutorials.sh  smoke-test-wheel.py  verify-s3-wheel-versions.sh  verify-wheel-version.sh
.github/scripts/tests/: test_build_and_install.bats  test_check_tt_metal_version.bats  test_configure_ttlang_build.bats  test_get_version_tag.bats  test_helper.bash  test_publish_s3_summary.bats  test_publish_s3_wheels.bats  test_require_pypi_ttnn_alignment.bats  test_resolve_s3_publish_inputs.bats  test_resolve_wheel_versions.bats  test_verify_s3_wheel_versions.bats  test_verify_wheel_version.bats
.github/workflows/: call-build-docker.yml  call-build-toolchain.yml  call-build-wheels.yml  call-build.yml  call-test-dist-tutorials.yml  call-test-hardware.yml  call-test-sim.yml  ci.yml  docs-deploy.yml  on-build-docker-tutorials.yml  on-pr.yml  on-push.yml  publish-pypi.yml  publish-s3-pypi.yml
cmake/modules/: BuildTTMLIRMinimal.cmake  GetVersionFromGit.cmake  TTLangUtils.cmake
docs/: README.md  requirements.txt
docs/development/: DFBManagement.md  DST_Allocation.md  DST_Utilization.md  PipeNets.md
docs/sphinx/: build.md  conf.py  getting-started.md  index.rst  overview.md  programming-guide.md  simulator.md  testing.md  tools.md
docs/sphinx/_static/: tt_theme.css
docs/sphinx/_templates/: layout.html
docs/sphinx/elementwise-tutorial/: index.md
docs/sphinx/matmul-tutorial/: index.md
docs/sphinx/reference/: compiler-options.md  performance-tools.md  print-debugging.md
docs/sphinx/specs/: TTLangSpecification.md
docs/sphinx/tour/: dataflow-buffers.md  index.md
env/: ttlang_prompt_utils.sh
examples/: README.md  broadcast.py  eltwise_broadcast_reduce.py  eltwise_pipe.py  eltwise_pipe_node3.py  general_broadcast.py  matmul_1d.py  matmul_1d_mcast.py  multinode_matmul.py  single_node_matmul.py  test_transformer_block.py
examples/elementwise-tutorial/: __init__.py
examples/errors/: copy_source_lock_error.py  eltwise_add_deadlock.py
examples/matmul-tutorial/: __init__.py  step_0_ttnn_base.py  step_1_single_node_single_tile_block.py  step_2_single_node_multitile_block.py  step_3_multinode.py  step_4_multinode_grid_auto.py  step_5_multidevice_shard_m.py  step_6_multidevice_shard_k.py  step_7_multidevice_shard_k_all_reduce.py
examples/tutorial/: __init__.py  single_node_broadcast_multitile_blocks.py  single_node_broadcast_single_tile_block.py
lib/CAPI/: CMakeLists.txt  Dialects.cpp
packaging/: bundled_ttnn.py  internal_wheel_metadata.py  rewrite_readme.py
packaging/light/: pyproject.toml  setup.py
packaging/sim/: pyproject.toml  setup.py
python/: CMakeLists.txt
python/_pipenets/: __init__.py
python/pykernel/_src/: kernel_ast.py  utils.py
python/sim/: __init__.py  analysis.py  block.py  blockstate.py  context.py  context_types.py  copy.py  debug_print.py  dfb.py  diagnostics.py  greenlet_scheduler.py  math.py  operation.py  pipe.py  program.py  ttlang_sim.py  ttnnsim.py  typedefs.py
python/ttl/: __init__.py  compiler_options.py  constants.py  dataflow_buffer.py  diagnostics.py  kernel_runner.py  operators.py  pipe.py  ttl.py  ttl_api.py
python/ttl/_setup/: __init__.py  cli.py  external_tt_metal.py  host.py  sfpi.py  tutorials.py
python/ttl/_src/: ttl_ast.py
python/ttl/tutorials/: __init__.py
scripts/: build-and-install.sh
test/: CMakeLists.txt  TESTING.md
test/bindings/python/: ttl_passes.py
test/me2e/builder/: pipeline.py  ttnn_runner.py
test/packaging/: conftest.py  test_bundled_ttnn.py  test_external_tt_metal_setup.py  test_light_setup.py  test_rewrite_readme.py  test_setup_cli.py  test_setup_ttnn_dep_mode.py  test_workflow_helper_scripts.py
test/python/: auto_profile_bcast_multitile.py  diagnostics_multi_error.py  pipenet_predicate_emission.py  signpost_scopes.py  simple_add.py  simple_add_dram.py  simple_add_loop.py  simple_add_with_stmt.py  simple_bcast.py  simple_fill.py  simple_reduce.py  simple_reduce_bcast.py  simple_reduce_scalar.py  softmax_compiler_allocated_dfb.py  test_adversarial_multinode.py  test_auto_pop_push.py  test_bcast_add.py  test_bcast_multinode.py  test_bcast_ops.py  test_bcast_shape_expansion.py  test_compiler_allocated_dfb.py  test_comprehensive_multinode.py  test_elementwise_l1_acc.py  test_fa_simple.py  test_fill.py  test_issue_536_cb_pop_between_waits.py  test_l1_budget_device.py  test_layernorm.py  test_matmul_acc.py  test_matmul_fused_postops.py  test_matmul_l1_acc.py  test_matmul_with_bias_spmd.py  test_missing_device.py  test_pipenet_validation.py  test_reduce.py  test_scalar_mul.py  test_store_patterns.py  test_ttl_api_device_options.py  test_typecast.py
test/python/invalid/: invalid_cb_buffer_factor.py  invalid_cb_l1_overflow.py  invalid_cb_shape_mismatch.py  invalid_cb_shape_not_2tuple.py  invalid_mixed_dtype.py  invalid_nd_bcast.py  invalid_pipenet_full_grid_no_guard.py  invalid_pipenet_unanalyzable_guard.py  invalid_reduce_dims.py  invalid_reduce_scalar_undefined.py
test/python/packaging/: test_rewrite_readme.py
test/python/pipe/: scatter.py  test_mcast_matmul.py  test_minimal_matmul_pipes.py  test_pipe_conv.py  test_pipenet_active_guard.py  test_pipenet_captured.py  unicast.py  (+4 more)
test/scripts/: ttlang-sim-pytest
test/sim/: conftest.py  test_analysis.py  test_blockstate.py  test_context.py  test_copy.py  test_copyhandlers.py  test_dfb.py  test_examples.py  test_greenlet_scheduler.py  test_math.py  test_no_mutable_globals.py  test_operation_pipenets.py  test_pipe.py  test_program.py  test_ttlang_sim.py  test_ttnnsim.py
(+142 files in other folders)
