[build-system]
requires = ["setuptools>=61.0", "cmake", "nanobind", "wheel", "pip", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-lang"
description = "Python Bindings and Package for TT-Lang Compiler Project"
requires-python = ">=3.11"
keywords = ["mlir", "tt-lang", "tt-mlir", "tenstorrent", "compiler", "dsl", "kernel"]
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [
  {name = "Tenstorrent AI ULC"}
]
maintainers = [
  {name = "Tenstorrent AI ULC"}
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Code Generators"
]

dynamic = ["version", "readme", "dependencies"]

[project.optional-dependencies]
device = ["ttnn"]

[project.scripts]
ttlang-sim = "ttl.sim.ttlang_sim:main"

[project.urls]
Homepage = "https://github.com/tenstorrent/tt-lang"
Repository = "https://github.com/tenstorrent/tt-lang"
Issues = "https://github.com/tenstorrent/tt-lang/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements-runtime.txt"]}

[tool.pyright]
typeCheckingMode = "strict"
reportMissingParameterType = "error"
reportMissingTypeStubs = "warning"
reportMissingImports = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportUntypedFunctionDecorator = "error"
reportPrivateUsage = "error"
reportImportCycles = "error"
reportUnnecessaryIsInstance = "warning"

[tool.pytest.ini_options]
markers = [
    "requires_ttnn: marks simulator tests that compare against real ttnn goldens or otherwise require ttnn",
    "matmul_tutorial_ttnn: marks matmul-tutorial tests requiring real ttnn, steps 0 and 7 (deselected by default; enable with --run-matmul-tutorial-ttnn)",
    "matmul_tutorial_no_ttnn: marks matmul-tutorial simulator tests, steps 2-6 (deselected by default; enable with --run-matmul-tutorial-no-ttnn)",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
