[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-lang-sim"
description = "Pure-Python functional simulator for tt-lang kernels (no Tenstorrent hardware required)"
requires-python = ">=3.11"
keywords = ["tt-lang", "tenstorrent", "simulator", "dsl", "kernel"]
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [{name = "Tenstorrent AI ULC"}]
maintainers = [{name = "Tenstorrent AI ULC"}]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Compilers",
]

dynamic = ["version", "readme", "dependencies"]


[project.scripts]
ttlang-sim = "ttl.sim.ttlang_sim:main"
tt-lang-setup = "ttl._setup.cli:main"
tt-lang-setup-tutorials = "ttl._setup.tutorials:main"

[project.urls]
Homepage = "https://github.com/tenstorrent/tt-lang"
Repository = "https://github.com/tenstorrent/tt-lang"
Issues = "https://github.com/tenstorrent/tt-lang/issues"
